fixed search flickering issue, finished search css

--- a/frontend/src/components/dash/styling/dash-footer.css
+++ b/frontend/src/components/dash/styling/dash-footer.css
@@ -18,7 +18,7 @@ footer {
         width: 100%;
         padding: 20px;
         color: #fff;
-       
+        font-size: calc(15px + 0.390625vw);
         align-items: center;
         position: relative;
         bottom: 0;
@@ -34,7 +34,6 @@ footer {
     }
 
     .footer-links li {
-        margin-right: 10px;
         padding-top: 10px;
         padding-bottom: 10px;
         border-bottom: 1px solid white;
@@ -48,15 +47,16 @@ footer {
         background-color: #333;
         flex-direction: row;
         width: 100%;
+        height: 100px;
         padding: 20px;
         color: #fff;
         padding: 20px;
         font-size: calc(15px + 0.390625vw);
+        font-weight: bold;
         justify-content: space-between;
         align-items: center;
         display: flex;
         position: relative;
-        bottom: 0;
         left: 0;
         right: 0;
     }
@@ -71,7 +71,7 @@ footer {
     .footer-links li {
         margin-right: 10px;
         padding-right: 10px;
-        border-right: 1px solid white;
+        border-right: 2px solid white;
         width: auto
     }
 
